favicon and title change

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>38 - Importing and optimizing the scene</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
+    <title>Portal Scene</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
